<resources>
    <string name="app_name">Shoes market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <item name="search" type="id" />
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_my_store">My shoes</string>
    <string name="menu_bill_manage">Manage Bill</string>
    <string name="menu_liked_shoes">Liked shoes</string>
    <string name="menu_buy_later">Buy later</string>
    <string name="menu_account_management">Manage account</string>
    <string name="menu_order_management">Order management</string>
    <string name="menu_our_policies">Term and policies</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_payment_history">Buy/sell History</string>
    <string name="menu_support">Support</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string-array name="bankSpinnerItem">
        <item style="color:#F4F6F7">Choose your bank</item>
        <item>Vietcombank</item>
        <item>VP Bank</item>
        <item>Sacombank</item>
        <item>ACB</item>
        <item>OCB</item>
    </string-array>
</resources>
